Archive2/6f/3314362bbd748a/output
main.cpp: In instantiation of 'T func() [with T = Foo]':
main.cpp:25:15:   required from here
main.cpp:19:5: error: 'struct Foo' has no member named 'bar'
     T().bar();
     ^
